# Sleep-stage-and-accelerometer

./: SETUP.md
backend/: Dockerfile  old_server.py  requirements.txt  server.py  verify_model.py
backend/models/hyperparameters/: hparams.yaml  pre_proc_hparams.yaml
backend/models/hyperparameters/dataset_configurations/: donders_2022.yaml
backend/models/hyperparameters/dataset_configurations/preprocessed/: wearanize_plus.yaml
backend/models/model/: model_weights.h5
backend/zmax-datasets/: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
backend/zmax-datasets/.cursor/: cli.json
backend/zmax-datasets/.github/workflows/: cursor-code-review.yml  quality_assurance.yaml
backend/zmax-datasets/configs/datasets/: accelerometer_processed_datasets.yaml  ppg_processed_datasets.yaml  raw_datasets.yaml  source_datasets.yaml
backend/zmax-datasets/configs/pipelines/: accelerometer.yaml  empatica_ppg.yaml  empatica_ppg_artifact.yaml  ppg.yaml  simple_ppg.yaml  wearanize_plus.yaml  zmax_datasets.yaml
backend/zmax-datasets/configs/yasa/: finetune.yaml  train_from_scratch.yaml
backend/zmax-datasets/notebooks/: accelerometer.ipynb  empatica_ppg.ipynb  noise.ipynb  ppg.ipynb  wearanize_plus.ipynb
backend/zmax-datasets/resources/models/usleep-2024-zmax-finetune/hyperparameters/: hparams.yaml
backend/zmax-datasets/tests/test_datasets/: test_donders_2022.py
backend/zmax-datasets/tests/test_exports/: test_yasa.py
backend/zmax-datasets/tests/test_processing/: test_artifact_detection.py
backend/zmax-datasets/zmax_datasets/: settings.py
backend/zmax-datasets/zmax_datasets/datasets/: base.py  configs.py  donders_2018.py  donders_2022.py  karolinska.py  usleep.py  utils.py  wearanize_plus.py  zmax.py
backend/zmax-datasets/zmax_datasets/datasets/qs/: qs.py  qs_scoring_files.csv
backend/zmax-datasets/zmax_datasets/exports/: artifact.py  base.py  enums.py  usleep.py  utils.py  yasa.py
backend/zmax-datasets/zmax_datasets/pipeline/: configs.py  engine.py
backend/zmax-datasets/zmax_datasets/processing/: artifact_detection.py  sleep_scoring.py
backend/zmax-datasets/zmax_datasets/scripts/: evaluate_arousal_detection.py  export.py  export_artifact.py  export_ibi.py  process.py  sleep_scoring.py  train_yasa.py
backend/zmax-datasets/zmax_datasets/sources/zmax/: enums.py  utils.py
backend/zmax-datasets/zmax_datasets/transforms/: accelerometer.py  artifact.py  base.py  filter.py  ppg.py  resample.py
backend/zmax-datasets/zmax_datasets/utils/: data.py  exceptions.py  helpers.py  logger.py  transforms.py  yasa.py
web/: 7heart-beat-polar-h10.py  index.html  old_7heart-beat-polar-h10.py
