[tool.poetry]
name = "zmax_datasets"
version = "0.1.0"
description = ""
authors = ["Ali Saberi <ali.saberi96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "~1.23"
pandas = "^2.2.2"
mne = "^1.7.1"
h5py = "^3.11.0"
scipy = "1.8.1"
typing-extensions = "^4.12.2"
pyarrow = "^19.0.1"
loguru = "^0.7.3"
jupyterlab = {version = "^4.2.4", optional = true}
yasa = {version = "^0.6.5", optional = true}
setuptools = {version = "^74.1.2", optional = true}
ipykernel = {version = "^6.29.5", optional = true}
tqdm = {version = "^4.66.5", optional = true}
plotly = {version = "^5.24.1", optional = true}
ipywidgets = {version = "^8.1.5", optional = true}
nbformat = {version = "^5.10.4", optional = true}
pydantic = "^2.11.7"
tsfel = {version = "0.1.4", optional = true}
joblib = {version = "^1.5.1", optional = true}
lightgbm = {version = "^4.6.0", optional = true}
heartpy = "^1.2.7"
tensorflow-io-gcs-filesystem = {version = "~0.31", optional = true, markers = "sys_platform != 'darwin'"}
tensorflow-addons = {version = "~0.22", optional = true}
utime = {git = "https://github.com/alitsaberi/U-Time.git", optional = true}
tensorflow = {version = ">=2.10.0,<2.11", optional = true, markers = "sys_platform != 'darwin'"}
tensorflow-macos = {version = ">=2.10.0,<2.11", optional = true, platform = "darwin"}
psg-utils = {version = "^0.1.6", optional = true}
neurokit2 = "^0.2.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.7"
pre-commit = "^3.8.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-cov = "^6.0.0"

[tool.poetry.extras]
artifact_detection = ["tsfel", "joblib", "lightgbm"]
yasa = ["yasa", "setuptools", "tqdm"]
notebook = ["jupyterlab", "ipykernel", "plotly", "ipywidgets", "nbformat"]
sleep_scoring = ["tensorflow-io-gcs-filesystem", "tensorflow-addons", "utime", "tensorflow", "tensorflow-macos", "psg-utils"]

[tool.poetry.scripts]
export = "zmax_datasets.scripts.export:main"
process = "zmax_datasets.scripts.process:main"
export-artifact = "zmax_datasets.scripts.export_artifact:main"
export-ibi = "zmax_datasets.scripts.export_ibi:main"
sleep-scoring = "zmax_datasets.scripts.sleep_scoring:main"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 88
indent-width = 4

target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = []

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

